--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-<H1>NOME DO ALUNO , NUMERO</H1>
+<H1>MAYARA FREITAS , 20</H1>
     <div id="app">
         <input type="number" id="numeroMaximo" placeholder="Digite um número" min="1">
         <button onclick="gerarLista()">Gerar Lista</button>
@@ -16,4 +16,6 @@
 
     <script src="script.js"></script>
 </body>
+<link rel="stylesheet" type="text/css" href="style.css" />
+
 </html>
